Working on project report

--- a/Report/References.bib
+++ b/Report/References.bib
@@ -38,3 +38,19 @@
   pages={95-145},
   publisher={American Society of Civil Engineers}
 }
+
+@book{Laksa2012, 
+  title={Blending technics[sic] for Curve and Surface Constructions}, author={Laks\aa, Arne}, 
+  year={2012}
+}
+
+@misc{Weisstein2018, 
+  title={Heart Curve}, 
+  url={\url{http://mathworld.wolfram.com/HeartCurve.html}}, 
+  journal={Wolfram MathWorld}, 
+  author={Weisstein, Eric W},
+  year={2018}, 
+  month={Dec},
+  howpublished={\url{http://mathworld.wolfram.com/HeartCurve.html}},
+  note={Accesed on 2018-12-11}
+}
