Done with theory for the report, tesselation

--- a/Report/References.bib
+++ b/Report/References.bib
@@ -54,3 +54,18 @@
   howpublished={\url{http://mathworld.wolfram.com/HeartCurve.html}},
   note={Accesed on 2018-12-11}
 }
+
+@book{Schwarzkopf1997, 
+  place={Berlin}, 
+  title={Computational geometry: algorithms and applications}, publisher={Springer-Verlag}, 
+  author={Berg, Mark de. and Kreveld, Marc van. and Overmars, Mark and Schwarzkopf, Otfried}, 
+  year={1997}
+}
+
+@misc{NuEs:2016,
+  author = {Nu Es},
+  title = {Delaunay circumcircles centers.png},
+  year = {2016},
+  url = {\url{https://commons.wikimedia.org/w/index.php?title=File:Delaunay_circumcircles_centers.svg&oldid=205728880}},
+  note = {[Online; accessed 12-December-2018]}
+}
